--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "bluebird": "^3.5.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
