--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "promise",
   "version": "1.0.0",
-  "description": "",
+  "description": "iwqeroui",
   "main": "1.promise.js",
   "dependencies": {
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/preset-env": "^7.1.6",
     "bluebird": "^3.5.3"
   },
   "devDependencies": {
