--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-decorators": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
-    "bluebird": "^3.5.3"
+    "bluebird": "^3.5.3",
+    "jquery": "^3.3.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
